<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.prizma_distribucija.androiddevelopertask.feature_feed.presentation.feed.FeedFragment"
        android:label="fragment_feed"
...
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.prizma_distribucija.androiddevelopertask.feature_login.presentation.sign_up.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" /><action android:id="@+id/action_global_loginFragment" app:destination="@id/loginFragment"/><action android:id="@+id/action_global_feedFragment" app:destination="@id/feedFragment"/>
</navigation>
